<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_serif_pro"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:id="@+id/simonShape"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgBlue"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rosco_blue"
                    android:contentDescription="@string/imgblue"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imgRed"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rosco_red"
                    android:contentDescription="@string/imgred"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgYellow"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rosco_yellow"
                    android:contentDescription="@string/imgyellow"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imgGreen"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rosco_green"
                    android:contentDescription="@string/imggreen"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColorHint="#616161"
            android:textSize="20sp"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/singup"
                android:textColor="@color/primary_light"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="#E0E0E0"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>