<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".UserHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textColor="@color/primary_light"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/btnPlaySolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modesolo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnPlayCoop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modecoop"
            android:textColor="#E0E0E0"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txtSoloRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solorecord"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtSoloRecord1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/solorecord" />

        <TextView
            android:id="@+id/txtSoloRecord2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/solorecord" />

        <TextView
            android:id="@+id/txtSoloRecord3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/solorecord" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtCoopRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cooprecord"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtCoopRecord1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/cooprecord" />

        <TextView
            android:id="@+id/txtCoopRecord2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/cooprecord" />

        <TextView
            android:id="@+id/txtCoopRecord3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/cooprecord" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>