<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".SoloGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRecord"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/source_serif_pro"
                android:textAllCaps="false"
                android:textSize="25sp"
                tools:text="Record: 10000000" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_radius"
                android:fontFamily="@font/source_serif_pro"
                android:text="@string/exit"
                android:textColor="#E0E0E0"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_serif_pro"
            android:textAllCaps="false"
            android:textSize="25sp"
            tools:text="Score: 100000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_serif_pro"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="30sp"
            tools:text="Pulsa el boton para iniciar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnStartSolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radius"
            android:fontFamily="@font/source_serif_pro"
            android:text="@string/start"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBlue"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_img_blue"
                android:contentDescription="@string/imgblue"
                android:onClick="btnImage"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imgRed"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_img_red"
                android:contentDescription="@string/imgred"
                android:onClick="btnImage"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgYellow"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_img_yellow"
                android:contentDescription="@string/imgyellow"
                android:onClick="btnImage"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imgGreen"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_img_green"
                android:contentDescription="@string/imggreen"
                android:onClick="btnImage"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>